--- a/Kitodo/src/main/webapp/WEB-INF/templates/base.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/base.xhtml
@@ -24,6 +24,7 @@
             </ui:insert>
         </h:head>
         <h:body>
+            <h:outputStylesheet name="css/kitodo.css"/>
             <div class="flex-container">
                 <header class="flex-item" role="banner" id="portal-header">
                     <ui:insert name="header">
