--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -56,7 +56,7 @@
                         <a href="#"><i class="fa fa-th fa-lg"/></a>
                         <ul>
                             <li><h3>Dashboard <i>(Admin)</i></h3></li>
-                            <li class="nav-pic-text"><a href=""><i class="fa fa-folder-open fa-lg"/>Projekte</a></li>
+                            <li class="nav-pic-text"><h:link value="Projekte" outcome="projects.xhtml"><i class="fa fa-folder-open fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><a href=""><i class="fa fa-hourglass-3 fa-lg"/>Vorgänge</a></li>
                             <li class="nav-pic-text"><a href=""><i class="fa fa-bell fa-lg"/>Aufgaben</a></li>
                             <li class="nav-pic-text"><a href=""><i class="fa fa-files-o fa-lg"/>Batches</a></li>
