project form styling

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -441,7 +441,13 @@ main {
     height: 500px;
     }
 
+.input {
+    width:100%;
+}
 
+.input-with-button {
+    width:90%;
+}
 
 /*----------------------------------------------------------------------
 Footer
