used same styling for all listWrappers

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -441,14 +441,14 @@ main {
     height: 500px;
     }
 
-#ListWrapper {
+#listWrapper {
     width: 95%;
     margin: auto;
     border-radius: 5px;
     padding: 0;
 }
 
-#ListWrapper > div {
+#listWrapper > div {
     padding: 0;
 }
 
