Link to new production templates list

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -60,7 +60,7 @@
                             <li class="nav-pic-text"><h:link value="#{msgs.prozesse}" outcome="ProzessverwaltungAlle?linkId=allProcesses"><i class="fa fa-hourglass-3 fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.schritte}" outcome="AktuelleSchritteAlle"><i class="fa fa-bell fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.batches}" outcome="BatchesAll"><i class="fa fa-files-o fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.prozessvorlagen}" outcome="ProzessverwaltungAlle?linkId=templates"><i class="fa fa-file-text-o fa-lg"/></h:link></li>
+                            <li class="nav-pic-text"><h:link value="#{msgs.prozessvorlagen}" outcome="productionTemplates.jsf?linkId=templates"><i class="fa fa-file-text-o fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.dockets}" outcome="DocketList"><i class="fa fa-list-ol fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.regelsaetze}" outcome="RegelsaetzeAlle"><i class="fa fa-clipboard fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.ldapgruppen}" outcome="LdapGruppenAlle"><i class="fa fa-list-alt fa-lg"/></h:link></li>
