fixed issues displaying file groups popup

--- a/Kitodo/src/main/webapp/WEB-INF/templates/base.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/base.xhtml
@@ -42,6 +42,7 @@
                     </ui:insert>
                 </footer>
             </div>
+            <ui:insert name="dialog"/>
         </h:body>
     </f:view>
 </html>
