--- a/Kitodo/src/main/webapp/WEB-INF/templates/base.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/base.xhtml
@@ -25,6 +25,7 @@
         </h:head>
         <h:body>
             <h:outputStylesheet name="css/kitodo.css"/>
+            <h:outputStylesheet name="css/pattern-library.css"/>
             <div class="flex-container">
                 <header class="flex-item" role="banner" id="portal-header">
                     <ui:insert name="header">
