--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/breadcrumbs.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/breadcrumbs.xhtml
@@ -11,6 +11,7 @@
  *
 -->
 
-<ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html">
-    <h:outputText value="Dies ist die Navigation"/>
+<ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:h="http://java.sun.com/jsf/html">
+    <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
 </ui:composition>
