--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -24,7 +24,7 @@
 
         <section id="portal-search">
             <h:form id="search-form" action="">
-                <p:inputText id="search-field" a:placeholder="Suche nach Projekten, Vorgängen, Aufgaben oder Benutzern" />
+                <p:inputText id="search-field" a:placeholder="#{msgs.searchPlaceholder}" />
                 <button type="submit"><i class="fa fa-search"/></button>
             </h:form>
         </section>
@@ -33,29 +33,32 @@
             <nav id="header-nav" role="navigation">
                 <ul>
                     <li>
-                        <a href="#"><i class="fa fa-bell-o fa-lg"/><span class="batch-count bc-alert">25</span></a>
+                        <!-- List: my tasks -->
+                        <a href="#"><i class="fa fa-bell-o fa-lg"/><h:panelGroup rendered="#{AktuelleSchritteForm.page.totalResults gt 0}" styleClass="batch-count bc-alert">#{AktuelleSchritteForm.page.totalResults}</h:panelGroup></a>
                         <ul>
-                            <li><h3>Meine Aufgaben</h3></li>
-                            <li><a href=""><span class="nav-item-col">Scannen</span><span class="nav-item-col">Projekt 1</span><span class="nav-item-col"><i class="fa fa-check-square-o fa-lg nc-info"></i></span></a></li>
-                            <li><a href=""><span class="nav-item-col">Scannen</span><span class="nav-item-col">Projekt 1</span><span class="nav-item-col"><i class="fa fa-check-square-o fa-lg nc-info"></i></span></a></li>
-                            <li><a href=""><span class="nav-item-col">Scannen</span><span class="nav-item-col">Projekt 2</span><span class="nav-item-col"><i class="fa fa-check-square-o fa-lg nc-alert"></i></span></a></li>
-                            <li><a href="">alle meine Aufgaben (25)</a></li>
+                            <li><h3>#{msgs.aktuelleSchritte}</h3></li>
+                            <ui:repeat value="#{AktuelleSchritteForm.lazyDTOModel.load(0,3, null, null, null)}" var="task">
+                                <li><a href=""><span class="nav-item-col">#{task.title}</span><span class="nav-item-col">#{task.process.title}</span><span class="nav-item-col"><i class="fa fa-check-square-o fa-lg nc-info"/></span></a></li>
+                            </ui:repeat>
+                            <li><h:link outcome="AktuelleSchritteAlle" value="#{msgs.allMyTasks} (#{AktuelleSchritteForm.page.totalResults})"/></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-user-o fa-lg"/><span class="batch-count bc-info">7</span></a>
+                        <!-- List: active users -->
+                        <a href="#"><i class="fa fa-user-o fa-lg"/><h:panelGroup rendered="#{SessionForm.alleSessions.size() gt 0}" class="batch-count bc-info">#{SessionForm.alleSessions.size()}</h:panelGroup></a>
                         <ul>
-                            <li><h3>Aktive Benutzer</h3></li>
-                            <li><a href=""><span class="nav-item-col">Simone Musterfrau</span><span class="nav-item-col">Gruppe 2</span><span class="nav-item-col">V</span></a></li>
-                            <li><a href=""><span class="nav-item-col">John Doe</span><span class="nav-item-col">Gruppe 1</span><span class="nav-item-col">B</span></a></li>
-                            <li><a href=""><span class="nav-item-col">Dieter Mustermann</span><span class="nav-item-col">Gruppe 2</span><span class="nav-item-col">B</span></a></li>
-                            <li><a href="">alle aktiven Benutzer (7)</a></li>
+                            <li><h3>#{msgs.aktiveBenutzer}</h3></li>
+                            <ui:repeat value="#{SessionForm.alleSessions.subList(0, (SessionForm.alleSessions.size() gt 3) ? 3 : SessionForm.alleSessions.size())}" var="activeSession">
+                                <li><a href=""><span class="nav-item-col">#{activeSession['user']}</span><span class="nav-item-col">Gruppe 2</span><span class="nav-item-col">V</span></a></li>
+                            </ui:repeat>
+                            <li><h:link outcome="aktiveNutzer" value="#{msgs.allActiveUsers} (#{SessionForm.alleSessions.size()})"/></li>
                         </ul>
                     </li>
                     <li>
+                        <!-- Dashboard menu -->
                         <a href="#"><i class="fa fa-th fa-lg"/></a>
                         <ul>
-                            <li><h3>Dashboard <i>(Admin)</i></h3></li>
+                            <li><h3>#{msgs.dashboard}<h:outputText rendered="#{LoginForm.maximaleBerechtigung == 1}"> <i>(Admin)</i></h:outputText></h3></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.projekte}" outcome="projects"><i class="fa fa-folder-open fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.prozesse}" outcome="ProzessverwaltungAlle?linkId=allProcesses"><i class="fa fa-hourglass-3 fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.schritte}" outcome="AktuelleSchritteAlle"><i class="fa fa-bell fa-lg"/></h:link></li>
@@ -70,11 +73,12 @@
                         </ul>
                     </li>
                     <li>
+                        <!-- User menu -->
                         <a href="#"><i class="fa fa-user-circle-o fa-lg"/></a>
                         <h:form id="logout-form">
                             <ul id="nav-user">
-                                <li><h3><h:outputText value="#{LoginForm.myBenutzer.name} #{LoginForm.myBenutzer.surname}"/><h:outputText rendered="#{LoginForm.maximaleBerechtigung == 1}"> <i>(Admin)</i></h:outputText></h3></li>
-                                <li><a href="">Sprache: Deutsch</a></li>
+                                <li><h3>#{LoginForm.myBenutzer.name} #{LoginForm.myBenutzer.surname}<h:outputText rendered="#{LoginForm.maximaleBerechtigung == 1}"> <i>(Admin)</i></h:outputText></h3></li>
+                                <li><a href="">#{msgs.Language}: #{SpracheForm.locale}</a></li>
                                 <li><h:link value="#{msgs.userData}" outcome="BenutzerKonfiguration"/></li>
                                 <li><h:link value="#{msgs.passwortAendern}" outcome="PasswortAendern"/></li>
                                 <li><h:commandLink value="#{msgs.signout}" action="#{LoginForm.Ausloggen}"/></li>
@@ -84,5 +88,6 @@
                 </ul>
             </nav>
         </section>
+
     </div>
 </ui:composition>
