--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
@@ -102,6 +102,22 @@ button .ui-icon {
     box-shadow: 0 0 0 transparent;
 }
 
+.ui-inputfield.ui-inputtext::-webkit-input-placeholder { /* Webkit, Blink */
+    color: #d8d8d8;
+}
+.ui-inputfield.ui-inputtext:-moz-placeholder { /* Firefox 4-18 */
+    color: #d8d8d8;
+}
+.ui-inputfield.ui-inputtext::-moz-placeholder { /* Firefox 19+ */
+    color: #d8d8d8;
+}
+.ui-inputfield.ui-inputtext:-ms-input-placeholder { /* IE 10-11 */
+    color: #d8d8d8;
+}
+.ui-inputfield.ui-inputtext::-ms-input-placeholder { /* Edge */
+    color: #d8d8d8;
+}
+
 .ui-selectcheckboxmenu .ui-selectcheckboxmenu-label,
 .ui-selectonemenu .ui-selectonemenu-label {
     border: 1px solid #004f81;
