--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
@@ -61,6 +61,11 @@ button .ui-icon {
     border-radius: 0;
 }
 
+.ui-button-text-icon-left .ui-icon.fa,
+.ui-button-text-icon-right .ui-icon.fa {
+    overflow: visible;
+}
+
 .ui-button-text-icon-left .ui-button-text {
     padding: .7em .7em .7em 2.1em;
 }
