--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/breadcrumbs.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/breadcrumbs.xhtml
@@ -12,6 +12,6 @@
 -->
 
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                xmlns:h="http://java.sun.com/jsf/html">
+                xmlns:h="http://xmlns.jcp.org/jsf/html">
     <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
 </ui:composition>
